--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,10 @@
 xmlns:tools="http://schemas.android.com/tools"
 package="com.example.mapcreator">
 
-<uses-permission android:name="android.permission.CAMERA"/>
-<uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 <!-- This tag indicates that this application requires ARCore.  This results in the application
      only being visible in the Google Play Store on devices that support ARCore. -->
 <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
